Remove phone_num from user schema
Also updated documentation.
